# llm-roboticarm

./: .gitignore  Button.ipynb  General-Flowchart.drawio  README.md  pyproject.toml
llm-roboticarm/: Gear.json  Robot_Flow.py  agent_creator.py  agent_management_system.py  audio_utils.py  cameraTest.py  camera_manager.py  function_analyzer.py  functions.py  general_utils.py  llm_agent.py  llm_agent_draft.py  llm_agent_old.py  llm_rag.py  llm_roboticarm_main.py  log_setup.py  openai_agent.py  openai_rag.ipynb  params.json  prompts.py  rag_handler.py  robot_controller.py  robot_tasks.py  robot_utils.py  robotic_arm_assembly.py  robotic_arm_assembly_old.py  robotic_arm_assembly_stationary.py  test.py  ur5e.py  user_agent.py  user_input_control.py  user_interface.py  vlm-test2.py  vlm_test.py  voice_control.py  voice_recorder.py  xarm_assembly.py
llm-roboticarm/initialization/cameras/: Camera1.json
llm-roboticarm/initialization/products/: products.json
llm-roboticarm/initialization/resources/robots/: robots.json
llm-roboticarm/initialization/resources/sensors/: camera.json
llm-roboticarm/initialization/robots/: Robot1.json  xArm.json
llm-roboticarm/initialization/robots/specification/: params.json  params2.json  params_general.json  params_movement.json  ~$ble Shark Assembly SOP for Robotic Assembly_without_cap.doc
llm-roboticarm/ultralytics_yolov5_master/models/: common.py
llm-roboticarm/voice_keywords/: end_of_command_wakeword.ppn  hello_xarm_wakeword.ppn
llm-roboticarm/xArm-Python-SDK-master/xArm6/: HVAC_Assembly.py
llm-roboticarm/xArm-Python-SDK-master/xarmlib/core/utils/: log.py
llm-roboticarm/xArm-Python-SDK-master/xarmlib/tools/: blockly_tool.py
llm-roboticarm/xArm-Python-SDK-master/xarmlib/x3/: base.py
llm-roboticarm/xarmlib/tools/blockly/: _blockly_tool.py
llm-roboticarm/xarmlib/wrapper/: xarm_api.py
llm-roboticarm/xarmlib/x3/: studio.py  xarm.py
